k8-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-portal
  namespace: customer-portal
  labels:
    app: customer-portal
spec:
  selector:
    matchLabels:
      app: customer-portal
  template:
    metadata:
      labels:
        app: customer-portal
    spec:
      volumes:
        - name: config-overrides
          configMap:
            name: config-overrides-backend
            defaultMode: 420
      containers:
        - name: customer-portal
          image: 995135968745.dkr.ecr.us-west-2.amazonaws.com/customer_portal:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources: { }
          volumeMounts:
            - mountPath: /app/config_overrides.py
              subPath: config_overrides.py
              name: config-overrides
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-portal-dramatiq
  namespace: customer-portal
  labels:
    app: customer-portal-dramatiq
spec:
  selector:
    matchLabels:
      app: customer-portal-dramatiq
  template:
    metadata:
      labels:
        app: customer-portal-dramatiq
    spec:
      volumes:
        - name: config-overrides
          configMap:
            name: config-overrides-backend
            defaultMode: 420
      containers:
        - name: customer-portal-dramatiq
          image: 995135968745.dkr.ecr.us-west-2.amazonaws.com/customer_portal:master
          command:
            - "python"
          args:
            - "app/manage.py"
            - "worker"
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources: { }
          volumeMounts:
            - mountPath: /app/config_overrides.py
              subPath: config_overrides.py
              name: config-overrides
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler

---
apiVersion: v1
kind: Service
metadata:
  name: customer-portal-http
  namespace: customer-portal
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: customer-portal
  type: ClusterIP
  sessionAffinity: None

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: customer-portal-ingress
  namespace: customer-portal
spec:
  rules:
    - host: customer-portal-staging.trextel.com
      http:
        paths:
          - path: /
            backend:
              serviceName: customer-portal-http
              servicePort: 80
  tls:
    - hosts:
        - customer-portal-staging.trextel.com
      secretName: trextel-tls
